cumulative updates for Onboarding A-Team meeting

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -95,7 +95,7 @@ Hello, <%= session[:cas_user] %>!
 					
 					<a name="raptors"></a>
 
-					<p>Lorem ipsum dolor sit amet, lacus nulla diamlorem, mi mauris non vel, nonummy habitant. Vel sollicitudin pede tempus magna id. Interdum sodales quam tempor vel, massa ut, hendrerit massa integer fusce vitae, ut ad. <a title="Welcome to FAU!" href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
+					<p>Congratulations on your acceptance to Florida Atlantic University.  We are so excited to have you join the Class of 2019!  This is an exciting time, with lots of steps to prepare for your first day on campus.  Please read through these pages carefully, as there is a lot of information to know before you arrive on campus. <a title="Welcome to FAU!" href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
 
 					<!-- <p>
 						<a href="#divForm" class="gallery-images" id="btnForm">[More Information]</a>
@@ -161,6 +161,7 @@ Hello, <%= session[:cas_user] %>!
 				 		 
 				 		<p>All admitted freshmen must confirm their intention to enroll and secure their space in the class with a $200.00 <strong>non-refundable</strong> deposit. The $200 is applied to your tuition and fees for the semester in which you are admitted to FAU. It will be forfeited if you pay the deposit and choose not to enroll at FAU for that term, or if you submit a change of entry request for a different term. Your space will be released to another applicant if the deposit is not received by<span style="text-decoration: underline;"> May 1 or within two weeks of admission if admitted after May 1 <sup>st</sup></span>.
                          <br><br>The deposit is applied to your account when you enroll and will be used toward your tuition and fees. It will be forfeited if you do not enroll. <a title="FAU Admissions Deposit" href="http://www.fau.edu/admissions/tuitiondeposit.php" target="_blank">[More Information]</a></p>
+				 		
 				 		
 
 				 		<div class="alert alert-border alert-danger text-center fade in alert-dismissable">
@@ -262,7 +263,7 @@ Hello, <%= session[:cas_user] %>!
 				  		 <p>The FAUNet ID is the account name you will use to login to many of the systems you will utilize in your daily life at Florida Atlantic University. It is a part of your official FAU e-mail address (e.g., FAUNetID@fau.edu). All students, faculty and staff are automatically granted a FAUNet ID and may claim their account by logging into the MyFAU portal. While many online services provided by the University require a separate password, OIT is working to synchronize these passwords while striving to improve the security of the system.</p>
 
 				  		 <p>
-				  		 	<a title="FAU Account Claiming"href="#" id="claimAccountBut">Start claiming your account</a>
+				  		 	<a title="FAU Account Claiming" href="https://accountst.fau.edu" target="_blank" id="claimAccountBut">[Start claiming your account]</a>
 				  		 </p>
 				  		<!-- 
 				  		<div class="buttons-box clearfix">
@@ -314,10 +315,7 @@ Hello, <%= session[:cas_user] %>!
 								<input type="checkbox" name="communicationpref" value="email"> Email
 						  	</label>
 
-						  	<label class="checkbox">
-								<input type="checkbox" name="communicationpref" value="mail"> Mail
-						  	</label>
-
+						  
 						  	<label class="checkbox">
 								<input type="checkbox" name="communicationpref" id="mobileText" value="text"> Mobile/Text Messages
 						  	</label>
@@ -477,7 +475,10 @@ Hello, <%= session[:cas_user] %>!
 					  		<h3 class="title">Your Financial Aid Documents</h3>
 
 					  		<p>To apply for financial aid, complete an online Free Application for Federal Student Aid at www.fafsa.ed.gov beginning January 1. The FAU priority deadline is March 1. Financial aid correspondence will be sent to your MyFAU email account. For more information, visit the financial aid website at www.fau.edu/finaid or call 561-297-3530.&nbsp;
-					  			<a title="FAU Financial Aid Information" href="http://www.fau.edu/finaid" target="_blank">[More Information]</a></p>
+					  			<a title="FAU Financial Aid Information" href="http://www.fau.edu/finaid" target="_blank">[More Information]</a> | 
+					  			<a title="FAU Financial Aid Forms" href="http://www.fau.edu/finaid/resources/forms.php" target="_blank">[FAFSA Form Information]</a>
+
+					  		</p>
 
 					  		
 
@@ -872,11 +873,7 @@ Hello, <%= session[:cas_user] %>!
 						<button data-dismiss="alert" class="close" type="button">×</button>
 						<br>
 						<table class="table table-striped text-left order-details">	
-							<thead>
-				  				<tr>
-				  					<th class="product-name">Your registered credit hours</th><th class="product-total">Term</th>
-				  				</tr>
-				  			</thead>
+							
 							<strong>
 								<%= registered_hours(@znum)%>
 							</strong>
@@ -1427,7 +1424,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 	    event.preventDefault();
 	    //window.open($(this).attr(""), "popupWindow", "width=600,height=600,scrollbars=yes");
 
-	    window.open("http://boc22oimt2vhn.fau.edu:14000/SelfService", "PopupWindow", "width=600,height=600,scrollbars=yes,resizable=no");
+	    window.open("http://accountst.fau.edu/", "PopupWindow", "width=600,height=600,scrollbars=yes,resizable=no");
 	});
 
 	 
