removed tuition comparision from residency validation

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -551,7 +551,7 @@ Hello, <%= session[:cas_user] %>!
 	                    <p>
                     </div>
 
-                    <div class="alert alert-border alert-info text-center fade in alert-dismissable">
+                  <!--   <div class="alert alert-border alert-info text-center fade in alert-dismissable">
                     	<button data-dismiss="alert" class="close" type="button">×</button>
                     	<div class="table-responsive">
                     	<h3 class="title">Resident vs Non-Resident Tuition Comparison</h3>
@@ -619,7 +619,7 @@ Hello, <%= session[:cas_user] %>!
                     		</tbody>
                     	</table>
                     </div>
-					</div>
+					</div> -->
 				<!--<form>
 				  <div>
 					<label class="radio"><input type="radio" name="register"> Checkout as Guest</label>
