--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -655,9 +655,22 @@ Hello, <%= session[:cas_user] %>!
 			   
 			  <div class="step-content">
 			  		
-		  		<h3 class="title">On-Campus Housing</h3>
+		  		<h3 class="title">On-Campus Housing </h3>
 
 		  		<p>Lorem ipsum Ad ullamco elit reprehenderit veniam aute minim dolore ullamco incididunt ea do. Lorem ipsum Reprehenderit do consectetur dolore do fugiat proident incididunt consequat minim ullamco. Lorem ipsum Proident laboris dolore in aliqua ut magna minim irure ut proident. Lorem ipsum Anim dolore incididunt aliquip do irure aute reprehenderit reprehenderit enim ut. Lorem ipsum Reprehenderit commodo anim laboris ex cupidatat dolor deserunt dolore exercitation Ut et culpa.  <a title="FAU Housing" href="http://www.fau.edu/housing/" target="_blank">[More Information]</a> </p>
+
+		  		<div class="alert alert-border alert-danger text-center fade in alert-dismissable">
+			  		<button data-dismiss="alert" class="close" type="button">×</button>
+		             <p>
+		             	<strong>
+		             		 <% if @housing_fee_required == 1 %>			  	
+				                    Our records indicate your home address is OUTSIDE a 30-mile commutable radius of the campus. <br> As such you are required to live in University Housing.		                    	
+			                 <% else %>
+			                 		Our records indicate your home address is within a 30-mile commutable radius of the campus. <br> As such you are NOT required to live in University Housing.
+			                 <% end %>
+	              		</strong>
+		              <p>
+	              </div>
 
 		  		<p>
 		  			
