changed ssot to use prod (sso); changed OARS hyperlink for more info

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -768,12 +768,12 @@ Hello, <%= session[:cas_user] %>!
 			
 			<div id="step-11" class="collapse">				   
 			  <div class="step-content">			  		
-		  		<h3 class="title">OARS</h3>
+		  		<h3 class="title">Online Advising & Resource System</h3>
 		  		<p>
 					"OARS" is a self-directed system. You may be a little nervous about choosing classes on your own, but DON'T WORRY! Help is always just a phone call or mouse click away, and the instructions are very user-friendly. When you log in to select your courses, you will find:
 						A brief description of the course when you click on the subject.
 						A sample class schedule for your major.
-						It takes three (3) to five (5) business days to process your submitted OARS form. After three to five business days, log back into OARS to review your advisor's comments. If your holds are cleared and your course selections are in sync with your advisors, you can log into MyFAU to register for classes. That's all there is to it!  <a title="OARS information" href="http://www.fau.edu/uas/oars_welcome.php" target="_blank">[More Information]</a>
+						It takes three (3) to five (5) business days to process your submitted OARS form. After three to five business days, log back into OARS to review your advisor's comments. If your holds are cleared and your course selections are in sync with your advisors, you can log into MyFAU to register for classes. That's all there is to it!  <a title="OARS information" href="http://www.fau.edu/uas/oars.php" target="_blank">[More Information]</a>
 				</p>	
 
 
