add tuition payment verbiage and hyperlinks 'More Info' & 'Fee Payment Information'

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -1066,7 +1066,12 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 			<div id="step-19" class="collapse">				   
 			  <div class="step-content">			  		
 		  		<h3 class="title">Tuition and Billing Services</h3>
-				
+				  <p>
+				  	<b>
+				  	Please note: The tuition deposit is separate from any Housing payments. First time applicants who plan to live on campus  are required to pay a $100 one-time non-refundable administration charge. 
+				    </b>
+				  </p>
+
 				  <p>
                   Florida Atlantic University is pleased to announce there will be no net increase of tuition and fees for the 2014-15 Academic Year. The last day to pay the balance due for Fall 2014 is August 25, 2014.
                   </p>
@@ -1095,6 +1100,16 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
                   <p>
                 		If you have any questions, please email <a href="mailto:webcontroller@fau.edu">webcontroller@fau.edu</a> or call tuition and billing services (561)297-6101.
                   </p>
+
+                  <p>
+                    <a href='http://www.fau.edu/registrar/pdf/acadcal1516.pdf' target='_blank'>
+              	   		[More Information]
+              	    </a>  | 
+              	     <a href='http://www.fau.edu/controller/student_information/pdfs/Summer_2015_Fee_Bulletin_2.pdf ' target='_blank'>
+              	   		[Fee Payment Information]
+              	    </a>
+              	  </p>
+
               
 				</div>			
 			</div>
